force-app/main/default/objects/Participant_Study_Enrollment__c/Participant_Study_Enrollment__c.object-meta.xml
<CustomObject>
    <!--enableLicensing>false</enableLicensing-->
    <label>Participant Study Enrollment</label>
    <nameField>
        <displayFormat>PSE{00000000}</displayFormat>
        <label>Participant Study Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Study Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>