force-app/main/default/objects/Participant_Study_Enrollment__c/fields/Clinical_Trial_Profile__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Study</description>
    <label>Clinical Trial Profile</label>
    <referenceTo>Clinical_Trial_Profile__c</referenceTo>
    <relationshipLabel>Participant Study Enrollments</relationshipLabel>
    <relationshipName>Participant_Study_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>