force-app/main/default/objects/Participant_Study_Enrollment__c/fields/IsRequestDataFromSDH__c.field-meta.xml
<CustomField>
    <fullName>IsRequestDataFromSDH__c</fullName>
    <formula>AND
(
AND (
NOT (ISPICKVAL(Status__c, &quot;Trial Complete&quot;)),
NOT (ISPICKVAL(Status__c,&quot;Drop out&quot;))
),
ISPICKVAL(Clinical_Trial_Profile__r.Participating_in_Patient_Portal__c, &quot;Yes&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsRequestDataFromSDH</label>
    <type>Checkbox</type>
</CustomField>