force-app/main/default/objects/Participant_Study_Enrollment__c/fields/IsSubjectIDverifiedInSDH__c.field-meta.xml
<CustomField>
    <fullName>IsSubjectIDverifiedInSDH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSubjectIDverifiedInSDH</label>
    <type>Checkbox</type>
</CustomField>