force-app/main/default/objects/Participant_Study_Enrollment__c/fields/IsSubjectIDverifiedInSDH_c__c.field-meta.xml
<CustomField>
    <fullName>IsSubjectIDverifiedInSDH_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSubjectIDverifiedInSDH__c</label>
    <type>Checkbox</type>
</CustomField>