force-app/main/default/objects/Participant_Study_Enrollment__c/fields/Participant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Participant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participant Study Enrollments (Participant Contact)</relationshipLabel>
    <relationshipName>Participant_Study_Enrollments1</relationshipName>
    <type>Lookup</type>
</CustomField>