force-app/main/default/objects/Participant_Study_Enrollment__c/fields/Participant_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Participant_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enrolled Participant from Refferal Hub</inlineHelpText>
    <label>Participant Enrollment</label>
    <referenceTo>Participant_Enrollment__c</referenceTo>
    <relationshipLabel>Participant Study Enrollments</relationshipLabel>
    <relationshipName>Participant_Study_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>