force-app/main/default/objects/Participant_Study_Enrollment__c/fields/PI_Contact__c.field-meta.xml
<CustomField>
    <fullName>PI_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PI Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participant Study Enrollments</relationshipLabel>
    <relationshipName>Participant_Study_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>