force-app/main/default/objects/Participant_Study_Enrollment__c/fields/Screening_ID__c.field-meta.xml
<CustomField>
    <fullName>Screening_ID__c</fullName>
    <label>Screening ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>