force-app/main/default/objects/Participant_Study_Enrollment__c/fields/Study_ID__c.field-meta.xml
<CustomField>
    <fullName>Study_ID__c</fullName>
    <formula>Study_Site__r.Study_Site_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study ID</label>
    <type>Text</type>
</CustomField>